See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.97.00

              Add pbnnoise.

              xwdtopnm: Add ability to process bit depth 32.

              pgmtoppm: Add -black, -white.

              ppmpat: Add -mesh.

              pampaintspill: Add -near.  Thanks Scott Pakin.

              pamtogif: Fix bug: doesn't ignore the input alpha mask when user
              specified -transparent.  Broken in Netpbm 10.37 (December 2006).

              palmtopnm: Fix bug: fails with PackBits input on platform with
              default unsigned char, such as ppc64.  Always broken.  (Ability
              to convert PackBits input was new in Netpbm 10.27 (March 2005).
              
              pamrubber: Fix bug: random behavior with -quad when you specify
              both points for source or target and the second one is lower in
              the image than the first.  Always broken (Pamrubber was new in
              Netpbm 10.54 (March 2011)).

              sunicontopnm, escp2topbm, mgrtopbm, ybmtopbm, pamcut, pbmpscale,
              pnmcat, pnmpad: Fix arithmetic overrun with ridiculously large
              image.

              pbmclean: Fix overallocation of memory (waste).

              libnetbm: Add pnm_writepamrowpart, pnm_formatPamtuples.

              libnetpbm: When validating computable size of width and height,
              allow for adding up to 10 instead of 2, to account for rounding
              up to a multiple of 8 in processing bit maps.

              Build: Don't attempt to build 'pamexec' on systems without
              Unix process management.  Bug introduced in Netpbm 10.94
              (March 2021) and supposedly fixed in 10.95, but not really.

21.09.25 BJH  Release 10.96.00

              pgmtoppm: Eliminate dependency on color dictionary when user
              does not specify any colors by name.
